--- a/business/contacts.html
+++ b/business/contacts.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
-    <link rel="stylesheet" href="/business/fonts/lato.css">
-    <link rel="stylesheet" href="/business/css/style.css">
-    <link rel="stylesheet" href="/business/css/media.css">
+    <link rel="stylesheet" href="./css/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="./fonts/lato.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/media.css">
     <title>Ассоциация предпринимателей России</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
             <div class="header__content">
                 <div class="header__logo-container">
                     <div class="header__logo-wrapper">
-                        <img src="/business/img/gerb.png" alt="gerb">
+                        <img src="./img/gerb.png" alt="gerb">
                         <span>Ассоциация<br> развития и поддержки предпринимательства</span>
                         <div class="header__skew blue"></div>
                         <div class="header__skew red"></div>
@@ -79,7 +79,14 @@
                     <li class="nav__divide"></li>
                     <li class="nav__item swiper-slide"><a href="#" class="nav__link">Ваши вопросы и ответы</a></li>
                     <li class="nav__divide"></li>
-                    <li class="nav__item swiper-slide"><a href="#" class="nav__link">помощь бизнесу</a></li>
+                    <li class="nav__item swiper-slide nav__item_container">
+                        <span class="nav__link">помощь бизнесу</span>
+                        <ul class="nav__inner">
+                            <li class="nav__item"><a href="#" class="nav__link">Внутренняя ссылка</a></li>
+                            <li class="nav__item"><a href="#" class="nav__link">Внутренняя ссылка</a></li>
+                            <li class="nav__item"><a href="#" class="nav__link">Внутренняя ссылка</a></li>
+                        </ul>
+                    </li>
                     <li class="nav__divide"></li>
                     <li class="nav__item swiper-slide"><a href="#" class="nav__link">тендеры с господдержкой и льготами</a></li> 
                     <li class="nav__divide"></li>
@@ -101,11 +108,11 @@
     <div class="container container-main">
         <aside class="aside">
             <div class="aside__enter">
-                <a href="#" class="aside__enter-link"><img src="/business/img/social.svg" alt="social">Вступить в ассоциацию</a>
+                <a href="#" class="aside__enter-link"><img src="./img/social.svg" alt="social">Вступить в ассоциацию</a>
             </div>
             <div class="aside__info">
                 <div class="aside__header">
-                    <img src="/business/img/info.svg" alt="info">
+                    <img src="./img/info.svg" alt="info">
                     <h3 class="aside__text">информация</h3>
                 </div>
                 <ul class="aside__info-list">
@@ -125,7 +132,7 @@
             </div>
             <div class="aside__stories">
                 <div class="aside__header">
-                    <img src="/business/img/medal.svg" alt="info">
+                    <img src="./img/medal.svg" alt="info">
                     <h3 class="aside__text">истории успеха</h3>
                 </div>
                 <div class="aside__stories-content">
@@ -137,22 +144,22 @@
             <div class="aside__partners">
                 <div class="aside__partners-wrap">
                     <div class="aside__partner">
-                        <img class="aside__partner-img" src="/business/img/partners/pertner1.png" alt="partner">
+                        <img class="aside__partner-img" src="./img/partners/pertner1.png" alt="partner">
                     </div>
                     <div class="aside__partner">
-                        <img class="aside__partner-img" src="/business/img/partners/pertner2.png" alt="partner">
+                        <img class="aside__partner-img" src="./img/partners/pertner2.png" alt="partner">
                     </div>
                     <div class="aside__partner">
-                        <img class="aside__partner-img" src="/business/img/partners/pertner3.png" alt="partner">
+                        <img class="aside__partner-img" src="./img/partners/pertner3.png" alt="partner">
                     </div>
                     <div class="aside__partner">
-                        <img class="aside__partner-img" src="/business/img/partners/pertner4.png" alt="partner">
+                        <img class="aside__partner-img" src="./img/partners/pertner4.png" alt="partner">
                     </div>
                     <div class="aside__partner">
-                        <img class="aside__partner-img" src="/business/img/partners/pertner5.png" alt="partner">
+                        <img class="aside__partner-img" src="./img/partners/pertner5.png" alt="partner">
                     </div>
                     <div class="aside__partner">
-                        <img class="aside__partner-img" src="/business/img/partners/pertner6.png" alt="partner">
+                        <img class="aside__partner-img" src="./img/partners/pertner6.png" alt="partner">
                     </div>
                 </div>
                 <a href="#" class="button">все партнеры</a>
@@ -160,16 +167,16 @@
             <div class="aside__sertificates">
                 <div class="aside__sertificates-wrap">
                     <div class="aside__sertificate">
-                        <img class="aside__sertificate-img" src="/business/img/sert11.png" alt="sertificate">
+                        <img class="aside__sertificate-img" src="./img/sert11.png" alt="sertificate">
                     </div>
                     <div class="aside__sertificate">
-                        <img class="aside__sertificate-img" src="/business/img/sert12.png" alt="sertificate">
+                        <img class="aside__sertificate-img" src="./img/sert12.png" alt="sertificate">
                     </div>
                     <div class="aside__sertificate">
-                        <img class="aside__sertificate-img" src="/business/img/sert3.png" alt="sertificate">
+                        <img class="aside__sertificate-img" src="./img/sert3.png" alt="sertificate">
                     </div>
                     <div class="aside__sertificate">
-                        <img class="aside__sertificate-img" src="/business/img/sert4.png" alt="sertificate">
+                        <img class="aside__sertificate-img" src="./img/sert4.png" alt="sertificate">
                     </div>
                 </div>
                 <a href="#" class="button">все лицензии</a>
@@ -226,7 +233,7 @@
                             <div class="main__contact-sub">рабочие дни с 8-00 до 18-00</div>
                         </div>
                         <div class="main__contact-img">
-                            <img src="/business/img/building.png" alt="building">
+                            <img src="./img/building.png" alt="building">
                         </div>
                     </div>
                 </section>
@@ -239,7 +246,7 @@
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="main__team-wrap">
-                            <img src="/business/img/team/1.jpg" alt="teammember">
+                            <img src="./img/team/1.jpg" alt="teammember">
                             <div class="main__contacts">
                                 <span class="main__name">Холодов Владимир Иванович</span>
                                 <span class="main__label">Руководитель Ассоциации</span>
@@ -250,7 +257,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="main__team-wrap">
-                            <img src="/business/img/team/2.jpg" alt="teammember">
+                            <img src="./img/team/2.jpg" alt="teammember">
                             <div class="main__contacts">
                                 <span class="main__name">Ефимович Ирина Геннадьевна</span>
                                 <span class="main__label">Заместитель руководителя</span>
@@ -261,7 +268,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="main__team-wrap">
-                            <img src="/business/img/team/3.jpg" alt="teammember">
+                            <img src="./img/team/3.jpg" alt="teammember">
                             <div class="main__contacts">
                                 <span class="main__name">Ершова наталья александровна</span>
                                 <span class="main__label">Руководитель отдела развития партнерских отношений</span>
@@ -272,7 +279,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="main__team-wrap">
-                            <img src="/business/img/team/4.jpg" alt="teammember">
+                            <img src="./img/team/4.jpg" alt="teammember">
                             <div class="main__contacts">
                                 <span class="main__name">Грант Кира николаевна</span>
                                 <span class="main__label">Руководитель отдела по работе с партнерами</span>
@@ -283,7 +290,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="main__team-wrap">
-                            <img src="/business/img/team/5.jpg" alt="teammember">
+                            <img src="./img/team/5.jpg" alt="teammember">
                             <div class="main__contacts">
                                 <span class="main__name">Иванов александр Владимирович</span>
                                 <span class="main__label">Руководитель тендерного отдела, организации торгов</span>
@@ -294,7 +301,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="main__team-wrap">
-                            <img src="/business/img/team/6.jpg" alt="teammember">
+                            <img src="./img/team/6.jpg" alt="teammember">
                             <div class="main__contacts">
                                 <span class="main__name">Гусенков сергей александрович</span>
                                 <span class="main__label">Руководитель юридического отдела</span>
@@ -305,7 +312,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="main__team-wrap">
-                            <img src="/business/img/team/7.jpg" alt="teammember">
+                            <img src="./img/team/7.jpg" alt="teammember">
                             <div class="main__contacts">
                                 <span class="main__name">Дорошенко Татьяна ивановна</span>
                                 <span class="main__label">Главный бухгалтер</span>
@@ -316,7 +323,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="main__team-wrap">
-                            <img src="/business/img/team/9.jpg" alt="teammember">
+                            <img src="./img/team/9.jpg" alt="teammember">
                             <div class="main__contacts">
                                 <span class="main__name">Шконда анастасия владимировна</span>
                                 <span class="main__label">Руководитель отдела управления проектами</span>
@@ -327,7 +334,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="main__team-wrap">
-                            <img src="/business/img/team/10.jpg" alt="teammember">
+                            <img src="./img/team/10.jpg" alt="teammember">
                             <div class="main__contacts">
                                 <span class="main__name">Болдырев Дмитрий сергеевич</span>
                                 <span class="main__label">Руководитель отдела аналитики закупок</span>
@@ -350,7 +357,14 @@
                     <li class="nav__divide"></li>
                     <li class="nav__item swiper-slide"><a href="#" class="nav__link">Ваши вопросы и ответы</a></li>
                     <li class="nav__divide"></li>
-                    <li class="nav__item swiper-slide"><a href="#" class="nav__link">помощь бизнесу</a></li>
+                    <li class="nav__item swiper-slide nav__item_container">
+                        <span class="nav__link">помощь бизнесу</span>
+                        <ul class="nav__inner">
+                            <li class="nav__item"><a href="#" class="nav__link">Внутренняя ссылка</a></li>
+                            <li class="nav__item"><a href="#" class="nav__link">Внутренняя ссылка</a></li>
+                            <li class="nav__item"><a href="#" class="nav__link">Внутренняя ссылка</a></li>
+                        </ul>
+                    </li>
                     <li class="nav__divide"></li>
                     <li class="nav__item swiper-slide"><a href="#" class="nav__link">тендеры с господдержкой и льготами</a></li> 
                     <li class="nav__divide"></li>
@@ -365,7 +379,7 @@
             <div class="footer__content">
                 <div class="footer__logo-container">
                     <div class="footer__logo-wrapper">
-                        <img src="/business/img/gerb.png" alt="gerb">
+                        <img src="./img/gerb.png" alt="gerb">
                         <span>Ассоциация<br> развития и поддержки предпринимательства</span>
                         <div class="footer__skew blue"></div>
                         <div class="footer__skew red"></div>
@@ -393,18 +407,18 @@
 
     <div class="popup divisions">
         <div class="popup__body">
-            <img src="/business/img/relations.png" alt="">
+            <img src="./img/relations.png" alt="">
         </div>
     </div>
 
     <div class="popup map">
         <div class="popup__body">
-            <img src="/business/img/map.png" alt="">
+            <img src="./img/map.png" alt="">
         </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
-    <script src="/business/js/main.js"></script>
+    <script src="./js/swiper-bundle.min.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
