--- a/business/sertificates.html
+++ b/business/sertificates.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
-    <link rel="stylesheet" href="/business/fonts/lato.css">
-    <link rel="stylesheet" href="/business/css/style.css">
-    <link rel="stylesheet" href="/business/css/media.css">
+    <link rel="stylesheet" href="./css/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="./fonts/lato.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/media.css">
     <title>Ассоциация предпринимателей России</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
             <div class="header__content">
                 <div class="header__logo-container">
                     <div class="header__logo-wrapper">
-                        <img src="/business/img/gerb.png" alt="gerb">
+                        <img src="./img/gerb.png" alt="gerb">
                         <span>Ассоциация<br> развития и поддержки предпринимательства</span>
                         <div class="header__skew blue"></div>
                         <div class="header__skew red"></div>
@@ -79,7 +79,14 @@
                     <li class="nav__divide"></li>
                     <li class="nav__item swiper-slide"><a href="#" class="nav__link">Ваши вопросы и ответы</a></li>
                     <li class="nav__divide"></li>
-                    <li class="nav__item swiper-slide"><a href="#" class="nav__link">помощь бизнесу</a></li>
+                    <li class="nav__item swiper-slide nav__item_container">
+                        <span class="nav__link">помощь бизнесу</span>
+                        <ul class="nav__inner">
+                            <li class="nav__item"><a href="#" class="nav__link">Внутренняя ссылка</a></li>
+                            <li class="nav__item"><a href="#" class="nav__link">Внутренняя ссылка</a></li>
+                            <li class="nav__item"><a href="#" class="nav__link">Внутренняя ссылка</a></li>
+                        </ul>
+                    </li>
                     <li class="nav__divide"></li>
                     <li class="nav__item swiper-slide"><a href="#" class="nav__link">тендеры с господдержкой и льготами</a></li> 
                     <li class="nav__divide"></li>
@@ -101,11 +108,11 @@
     <div class="container container-main">
         <aside class="aside">
             <div class="aside__enter">
-                <a href="#" class="aside__enter-link"><img src="/business/img/social.svg" alt="social">Вступить в ассоциацию</a>
+                <a href="#" class="aside__enter-link"><img src="./img/social.svg" alt="social">Вступить в ассоциацию</a>
             </div>
             <div class="aside__info">
                 <div class="aside__header">
-                    <img src="/business/img/info.svg" alt="info">
+                    <img src="./img/info.svg" alt="info">
                     <h3 class="aside__text">информация</h3>
                 </div>
                 <ul class="aside__info-list">
@@ -125,7 +132,7 @@
             </div>
             <div class="aside__stories">
                 <div class="aside__header">
-                    <img src="/business/img/medal.svg" alt="info">
+                    <img src="./img/medal.svg" alt="info">
                     <h3 class="aside__text">истории успеха</h3>
                 </div>
                 <div class="aside__stories-content">
@@ -159,31 +166,31 @@
         <main class="main">
             <div class="main__sertificates" data-mobile="false">
                 <div class="swiper-wrapper">
-                    <div class="main__sertificate swiper-slide"><img src="/business/img/sert1.png" alt="Sertificate"></div>
-                    <div class="main__sertificate swiper-slide"><img src="/business/img/sert2.png" alt="Sertificate"></div>
-                    <div class="main__sertificate swiper-slide"><img src="/business/img/sert3.png" alt="Sertificate"></div>
-                    <div class="main__sertificate swiper-slide"><img src="/business/img/sert4.png" alt="Sertificate"></div>
-                    <div class="main__sertificate swiper-slide"><img src="/business/img/sert5.png" alt="Sertificate"></div>
-                    <div class="main__sertificate swiper-slide"><img src="/business/img/sert6.png" alt="Sertificate"></div>
-                    <div class="main__sertificate swiper-slide"><img src="/business/img/sert7.png" alt="Sertificate"></div>
-                    <div class="main__sertificate swiper-slide"><img src="/business/img/sert8.png" alt="Sertificate"></div>
-                    <div class="main__sertificate swiper-slide"><img src="/business/img/sert9.png" alt="Sertificate"></div>
-                    <div class="main__sertificate swiper-slide"><img src="/business/img/sert10.png" alt="Sertificate"></div>
-                    <div class="main__sertificate swiper-slide"><img src="/business/img/sert11.png" alt="Sertificate"></div>
-                    <div class="main__sertificate swiper-slide"><img src="/business/img/sert12.png" alt="Sertificate"></div>
-                    <div class="main__sertificate swiper-slide"><img src="/business/img/sert13.png" alt="Sertificate"></div>
-                    <div class="main__sertificate swiper-slide"><img src="/business/img/sert14.png" alt="Sertificate"></div>
-                    <div class="main__sertificate swiper-slide"><img src="/business/img/sert15.png" alt="Sertificate"></div>
-                    <div class="main__sertificate swiper-slide"><img src="/business/img/sert16.png" alt="Sertificate"></div>
-                    <div class="main__sertificate swiper-slide"><img src="/business/img/sert17.png" alt="Sertificate"></div>
-                    <div class="main__sertificate swiper-slide"><img src="/business/img/sert18.png" alt="Sertificate"></div>
-                    <div class="main__sertificate swiper-slide"><img src="/business/img/sert19.png" alt="Sertificate"></div>
-                    <div class="main__sertificate swiper-slide"><img src="/business/img/sert20.png" alt="Sertificate"></div>
-                    <div class="main__sertificate swiper-slide"><img src="/business/img/sert21.png" alt="Sertificate"></div>
-                    <div class="main__sertificate swiper-slide"><img src="/business/img/sert22.png" alt="Sertificate"></div>
-                    <div class="main__sertificate swiper-slide"><img src="/business/img/sert23.png" alt="Sertificate"></div>
-                    <div class="main__sertificate swiper-slide"><img src="/business/img/sert24.png" alt="Sertificate"></div>
-                    <div class="main__sertificate swiper-slide"><img src="/business/img/sert25.png" alt="Sertificate"></div>
+                    <div class="main__sertificate swiper-slide"><img src="./img/sert1.png" alt="Sertificate"></div>
+                    <div class="main__sertificate swiper-slide"><img src="./img/sert2.png" alt="Sertificate"></div>
+                    <div class="main__sertificate swiper-slide"><img src="./img/sert3.png" alt="Sertificate"></div>
+                    <div class="main__sertificate swiper-slide"><img src="./img/sert4.png" alt="Sertificate"></div>
+                    <div class="main__sertificate swiper-slide"><img src="./img/sert5.png" alt="Sertificate"></div>
+                    <div class="main__sertificate swiper-slide"><img src="./img/sert6.png" alt="Sertificate"></div>
+                    <div class="main__sertificate swiper-slide"><img src="./img/sert7.png" alt="Sertificate"></div>
+                    <div class="main__sertificate swiper-slide"><img src="./img/sert8.png" alt="Sertificate"></div>
+                    <div class="main__sertificate swiper-slide"><img src="./img/sert9.png" alt="Sertificate"></div>
+                    <div class="main__sertificate swiper-slide"><img src="./img/sert10.png" alt="Sertificate"></div>
+                    <div class="main__sertificate swiper-slide"><img src="./img/sert11.png" alt="Sertificate"></div>
+                    <div class="main__sertificate swiper-slide"><img src="./img/sert12.png" alt="Sertificate"></div>
+                    <div class="main__sertificate swiper-slide"><img src="./img/sert13.png" alt="Sertificate"></div>
+                    <div class="main__sertificate swiper-slide"><img src="./img/sert14.png" alt="Sertificate"></div>
+                    <div class="main__sertificate swiper-slide"><img src="./img/sert15.png" alt="Sertificate"></div>
+                    <div class="main__sertificate swiper-slide"><img src="./img/sert16.png" alt="Sertificate"></div>
+                    <div class="main__sertificate swiper-slide"><img src="./img/sert17.png" alt="Sertificate"></div>
+                    <div class="main__sertificate swiper-slide"><img src="./img/sert18.png" alt="Sertificate"></div>
+                    <div class="main__sertificate swiper-slide"><img src="./img/sert19.png" alt="Sertificate"></div>
+                    <div class="main__sertificate swiper-slide"><img src="./img/sert20.png" alt="Sertificate"></div>
+                    <div class="main__sertificate swiper-slide"><img src="./img/sert21.png" alt="Sertificate"></div>
+                    <div class="main__sertificate swiper-slide"><img src="./img/sert22.png" alt="Sertificate"></div>
+                    <div class="main__sertificate swiper-slide"><img src="./img/sert23.png" alt="Sertificate"></div>
+                    <div class="main__sertificate swiper-slide"><img src="./img/sert24.png" alt="Sertificate"></div>
+                    <div class="main__sertificate swiper-slide"><img src="./img/sert25.png" alt="Sertificate"></div>
                 </div>
                 <div class="swiper-gallery"></div>
             </div>
@@ -197,7 +204,14 @@
                     <li class="nav__divide"></li>
                     <li class="nav__item swiper-slide"><a href="#" class="nav__link">Ваши вопросы и ответы</a></li>
                     <li class="nav__divide"></li>
-                    <li class="nav__item swiper-slide"><a href="#" class="nav__link">помощь бизнесу</a></li>
+                    <li class="nav__item swiper-slide nav__item_container">
+                        <span class="nav__link">помощь бизнесу</span>
+                        <ul class="nav__inner">
+                            <li class="nav__item"><a href="#" class="nav__link">Внутренняя ссылка</a></li>
+                            <li class="nav__item"><a href="#" class="nav__link">Внутренняя ссылка</a></li>
+                            <li class="nav__item"><a href="#" class="nav__link">Внутренняя ссылка</a></li>
+                        </ul>
+                    </li>
                     <li class="nav__divide"></li>
                     <li class="nav__item swiper-slide"><a href="#" class="nav__link">тендеры с господдержкой и льготами</a></li> 
                     <li class="nav__divide"></li>
@@ -212,7 +226,7 @@
             <div class="footer__content">
                 <div class="footer__logo-container">
                     <div class="footer__logo-wrapper">
-                        <img src="/business/img/gerb.png" alt="gerb">
+                        <img src="./img/gerb.png" alt="gerb">
                         <span>Ассоциация<br> развития и поддержки предпринимательства</span>
                         <div class="footer__skew blue"></div>
                         <div class="footer__skew red"></div>
@@ -244,7 +258,7 @@
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
-    <script src="/business/js/main.js"></script>
+    <script src="./js/swiper-bundle.min.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
